@@ -1,3 +1,11 @@
+2002-11-16  Hiroyuki Ito <hito@crl.go.jp>
+
+	* [w3m-dev 03436] Check image size
+	* file.c (process_img): check w > MAX_IMAGE_SIZE
+		(HTMLlineproc2body): check w,h > MAX_IMAGE_SIZE
+	* fm.h (MAX_IMAGE_SIZE): added
+	* image.c (getImageSize): check w,h,width,height > MAX_IMAGE_SIZE
+
 2002-11-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03435] save image with SAVE
@@ -4766,4 +4774,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.519 2002/11/15 15:51:23 ukai Exp $
+$Id: ChangeLog,v 1.520 2002/11/15 15:56:36 ukai Exp $
